--- a/templates/orders/place_order.html
+++ b/templates/orders/place_order.html
@@ -55,12 +55,12 @@
               <div id="home" class="tab-pane in active">
                 <div class="menu-item-holder">
                   <div>
-                    <table>
+                    <table class="table">
                         <tbody>
                             {% for item in cart_items  %}
                                 <tr>
                                     <td><img src="{{ item.fooditem.image.url }}" alt="Food Image" width="40" ></td>
-                                    <td><b>{{ item.fooditem }}</b></td>
+                                    <td style="line-height: 5px;"><b>{{ item.fooditem }}</b></td>
                                     <td> {{ item.quantity }} </td>
                                     <td>₹ {{ item.fooditem.price }}</td>
                                 </tr>
@@ -147,6 +147,11 @@
           let order_number = "{{order.order_number}}";
 
           sendTransaction(transaction_id, status, payment_method, url, order_number);
+
+          // Replace the above to show the success message within this page
+          const paypalButtonContainer = document.querySelector('#paypal-button-container');
+          paypalButtonContainer.innerHTML = '';
+          paypalButtonContainer.innerHTML = '<h3 class="text-center"><i class="fa fa-spinner fa-spin"></i> Please wait.....!</h3>'
         });
       },
     })
@@ -154,44 +159,48 @@
 
 
     function getCookie(name) {
-        const encodedName = encodeURIComponent(name) + "=";
-        const decodedCookies = decodeURIComponent(document.cookie);
-        const cookieArray = decodedCookies.split('; ');
+    const encodedName = encodeURIComponent(name) + "=";
+    const decodedCookies = decodeURIComponent(document.cookie);
+    const cookieArray = decodedCookies.split('; ');
 
-        for (let i = 0; i < cookieArray.length; i++) {
-            let cookie = cookieArray[i];
-            if (cookie.indexOf(encodedName) === 0) {
-                return cookie.substring(encodedName.length, cookie.length);
-            }
-        }
-        return null;
-    }
-
-    // Asynchronous function to send transaction data to the backend view.
-    async function sendTransaction(transaction_id, status, payment_method, url, order_number) {
-        try {
-            const response = await fetch(url, {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json",
-                    "X-CSRFToken": getCookie('csrf_token'), 
-                },
-                body: JSON.stringify({
-                    'transaction_id': transaction_id,
-                    'order_number': order_number,
-                    'payment_method': payment_method,
-                    'status': status,
-                }),
-            });
-            if (!response.ok) {
-                throw new Error(`HTTP error! status: ${response.status}`);
-            }
-            const responseData = await response.json();
-            console.log('Transaction successful:', responseData);
-
-        } catch (error) {
-            console.error('Error sending transaction:', error);
+    for (let cookie of cookieArray) {
+        if (cookie.indexOf(encodedName) === 0) {
+            return cookie.substring(encodedName.length, cookie.length);
         }
     }
+    return null;
+}
+
+async function sendTransaction(transaction_id, status, payment_method, url, order_number) {
+    try {
+        const csrfToken = getCookie('csrftoken'); // Ensure the CSRF token name matches
+        const response = await fetch(url, {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+                "X-CSRFToken": csrfToken,
+            },
+            body: JSON.stringify({
+                'transaction_id': transaction_id,
+                'order_number': order_number,
+                'payment_method': payment_method,
+                'status': status,
+            }),
+        });
+        if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
+        }
+        const responseData = await response.json();
+        if (responseData.status == 'success') {
+          let order_complete_url = "{% url 'order_complete' %}";
+          window.location.href = `${order_complete_url}?order_no=${responseData.order_number}&trans_id=${responseData.transaction_id}`
+        } else {
+            throw new Error('Transaction failed: ' + responseData.message);
+        }
+    } catch (error) {
+        alert('Error sending transaction: ' + error);
+    }
+}
+
 </script>
 {% endblock %}
