--- a/templates/accounts/vendorDashboard.html
+++ b/templates/accounts/vendorDashboard.html
@@ -23,7 +23,7 @@
                       Total Orders
                     </div>
                     <div class="card-body text-center">
-                      <a href="#"><h5 class="card-title">12345</h5></a>
+                      <a href="#"><h5 class="card-title">{{orders_count}}</h5></a>
                     </div>
                   </div>
                 </div>
@@ -51,68 +51,37 @@
               <br>
               <br>
               
-              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <div class="row">
-                  <div class="element-title has-border right-filters-row">
-                    <h5>Recent Orders</h5>
-                    <div class="right-filters row pull-right">
-                      <div class="col-lg-6 col-md-6 col-xs-6">
-                        <div class="input-field">
-                          <select class="chosen-select-no-single">
-                            <option selected="selected" value="">Select Orders Status</option>
-                            <option value="Processing">Processing</option>
-                            <option value="Cancelled">Cancelled</option>
-                            <option value="Completed">Completed</option>
-                          </select>
-                        </div>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </div>
-              </div>
+              <h5 class="text-uppercase">Recent Orders</h5>
               <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                   <div class="user-orders-list">
                     <div class="responsive-table">
-                      <ul class="table-generic">
-                        <li class="order-heading-titles">
-                          <div>Order id</div>
-                          <div>Date</div>
-                          <div>Total Price</div>
-                          <div>Charges</div>
-                          <div>Received</div>
-                          <div>Status</div>
-                        </li>
-                        <li class="order-heading-titles">
-                          <div><a href="#" data-toggle="modal" data-target="#order-det-22606">order-22606</a></div>
-                          <div>Apr 9,2020</div>
-                          <div>£ 38.99</div>
-                          <div>£ 3.90</div>
-                          <div>£ 35.09</div>
-                          <div><span class="order-status" style="background-color: #047a06;">Completed</span></div>
-                        </li>
-                        
-                        
-                        
-                        <li class="order-heading-titles">
-                          <div><a href="#" data-toggle="modal" data-target="#order-det-22606">order-22583</a></div>
-                          <div>Apr 9,2020</div>
-                          <div>£ 26.22</div>
-                          <div>£ 2.62</div>
-                          <div>£ 23.60</div>
-                          <div><span class="order-status" style="background-color: #1e73be;">Processing</span></div>
-                        </li>
-                        <li class="order-heading-titles">
-                          <div><a href="#" data-toggle="modal" data-target="#order-det-22606">order-22493</a></div>
-                          <div>Apr 2,2020</div>
-                          <div>£ 28.24</div>
-                          <div>£ 2.82</div>
-                          <div>£ 25.42</div>
-                          <div><span class="order-status" style="background-color: #047a06;">Completed</span></div>
-                        </li>
-                      </ul>
-
+                      <table class="table table-hover">
+                        <thead>
+                          <tr style="height: 2rem;">
+                            <th scope="col">Order Number</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Total</th>
+                            <th scope="col">Status</th>
+                            <th scope="col">Date</th>
+                            <th scope="col">Payment Method</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          
+                          {% for order in recent_orders %}
+                            <tr>
+                              <td><b><a href="{% url 'vendor_order_details' order.order_number %}">{{ order.order_number}}</a></b></td>
+                              <td>{{order.name}}</td>
+                              <td>₹ {{order.total}}</td>
+                              <td>{{order.status}}</td>
+                              <td>{{order.created_at}}</td>
+                              <td>{{ order.payment_method }}</td>
+                            </tr>
+                          {% endfor %}
+                          
+                        </tbody>
+                      </table>
                     </div>												
                   </div>
                 </div>
