--- a/templates/includes/vendor_sidebar.html
+++ b/templates/includes/vendor_sidebar.html
@@ -5,7 +5,7 @@
         <li class="{% if 'profile' in request.path %}active{% endif %}"><a href="{% url 'vendor_profile' %}"><i class="icon-building"></i>My Restaurant</a></li>
         <li class="{% if 'menu-builder' in request.path %}active{% endif %}"><a href="{% url 'menu_builder' %}"><i class="icon-menu5"></i>Menu Builder</a></li>
         <li class="{% if 'business-hours' in request.path %}active{% endif %}"><a href="{% url 'business_hours' %}"><i class="fa-regular fa-clock"></i>Business Hours</a></li>
-        <li><a href="restaurant-orders.html"><i class="icon-add_shopping_cart"></i>Orders</a></li>
+        <li class="{% if 'order_details' in request.path %}active{% endif %}"><a href="restaurant-orders.html"><i class="icon-add_shopping_cart"></i>Orders</a></li>
         <li><a href="restaurant-earnings.html"><i class="icon-money"></i>Earnings</a></li>
         <li><a href="restaurant-statement.html"><i class="icon-file-text22"></i>Statement</a></li>
         <li><a href="restaurant-change-password.html"><i class="icon-unlock-alt"></i>Change Password</a></li>
